<resources>
    <string name="app_name">Piga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_finish">Bitir</string>
    <string name="text_resume">Devam Et</string>
    <string name="chat">MESAJLAR</string>
    <string name="discover">KEŞFET</string>
    <string name="who_like_you">SENI BEGENENLER</string>
    <string name="profile">PROFIL</string>
    <string name="core_piga">PIGA</string>
</resources>